# maintainers-copilot-handle

./: .env.example  .gitattributes  .gitignore  DECISIONS.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260520_0001_baseline.py  20260520_0002_users_and_audit_log.py  20260520_0003_chunks_table.py  20260520_0004_conversations_messages.py  20260520_0005_long_term_memory.py  20260520_0006_widgets_table.py  20260522_0007_refresh_tokens.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/middleware/: cors.py
backend/app/api/routes/: auth.py  chat.py  conversations.py  health.py  memory.py  users.py  widget.py  widget_admin.py  widget_loader.py
backend/app/domain/: enums.py  exceptions.py
backend/app/domain/schemas/: rag.py  user.py  widget.py
backend/app/infra/: db.py  logging_setup.py  minio.py  modelserver_client.py  redaction.py  redis_client.py  startup_checks.py  tracing.py  vault.py
backend/app/repositories/: audit_log.py  chunks.py  conversations.py  memory.py  messages.py  refresh_tokens.py  widgets.py
backend/app/services/: widgets.py
backend/app/services/auth/: manager.py  models.py  refresh_models.py  strategy.py
backend/app/services/chat/: loop.py  models.py  snapshot.py
backend/app/services/memory/: long_term.py  models.py  short_term.py
backend/app/services/rag/: chunker.py  hyde.py  models.py  orchestrator.py  retriever.py  rst_chunker.py
backend/app/tools/: _base.py  classify_issue.py  extract_entities.py  rag_search.py  summarize_thread.py  write_memory.py
backend/evals/: eval_thresholds.yaml  run_all.py
backend/evals/classification/: _diff.py  _runner.py  golden_set.jsonl  run.py
backend/evals/rag/: _judge.py  _kappa.py  _retrieval_ablation.py  _runner.py  golden_set.jsonl  run.py
backend/prompts/: chatbot_system.md  classifier_llm.md  conversation_summary.md  hyde_generate.md  rag_answer.md  rag_judge.md
backend/scripts/: _classifier_card.py  _classifier_dataset.py  _classifier_eval.py  _classifier_model.py  _classifier_train.py  _dataset_fetch.py  _dataset_labels.py  _dataset_manifest.py  _dataset_splits.py  _ingest_pipeline.py  eval_llm_baseline.py  fetch_dataset.py  fetch_docs.py  ingest_corpus.py  promote_admin.py  seed_demo.py  train_classifier.py
backend/scripts/admin/: promote_admin.py
backend/scripts/classifier/: _classifier_card.py  _classifier_eval.py  _classifier_model.py  _classifier_train.py  restore_classifier.py  train_classifier.py
backend/scripts/corpus/: _chunker_issues.py  _ingest_pipeline.py  ingest_corpus.py
backend/scripts/dataset/: _dataset_fetch.py  _dataset_labels.py  fetch_dataset.py
backend/scripts/docs/: fetch_docs.py
backend/scripts/eval_jobs/: eval_llm_baseline.py  seed_golden_set_classification.py  seed_golden_set_rag.py
backend/scripts/loader/: load_artifacts.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flow.py  test_health.py  test_users_me.py
backend/tests/unit/: test_audit_log.py  test_classifier_card.py  test_classifier_dataset.py  test_classifier_model.py  test_config.py  test_dataset_labels.py  test_dataset_splits.py  test_eval_diff.py  test_eval_thresholds.py  test_exceptions.py  test_issue_chunker.py  test_judge_parse.py  test_kappa.py  test_long_term_memory_repo.py  test_markdown_chunker.py  test_origin_allowlist.py  test_rag_metrics.py  test_redaction.py  test_retriever.py  test_role_enum.py  test_rrf.py  test_short_term.py  test_startup_checks.py  test_summarize_overflow.py  test_tool_base.py  test_tool_dispatch.py  test_widget_loader_html.py
chatbot/: .dockerignore  Dockerfile  app.py  pyproject.toml
chatbot/lib/: api_client.py  session.py  theme.py
chatbot/pages/: 01_chat.py  02_memory_inspector.py  03_widget_admin.py
data-pipeline/: README.md  pyproject.toml
data-pipeline/notebooks/: 01_classifier_eda.ipynb  02_classifier_training.ipynb
data-pipeline/src/: _chunker.py  _classifier_card.py  _classifier_dataset.py  _classifier_eval.py  _classifier_model.py  _classifier_train.py  _github.py  _labels.py  _manifest.py  _splits.py  fetch_dataset.py  fetch_docs.py  ingest_corpus.py  run_all.py  train_classifier.py
demo/host/: Dockerfile  index.html  nginx.conf
infra/minio/init/: create-buckets.sh
infra/postgres/init/: 01-init-pgvector.sql
infra/vault/init/: seed-secrets.sh
modelserver/: .dockerignore  Dockerfile  pyproject.toml
modelserver/app/: config.py  main.py
modelserver/app/infra/: classifier_loader.py  embedder.py  groq.py  llm.py  llm_classifier.py  logging_setup.py  minio.py  ner.py  prompts.py  reranker.py  vault.py
modelserver/app/routes/: classify.py  embed.py  ner.py  rerank.py  summarize.py
modelserver/app/schemas/: classify.py  embed.py  ner.py  rerank.py  summarize.py
modelserver/prompts/: summarize_thread.md
modelserver/tests/unit/: test_classifier_loader.py  test_llm_classifier.py  test_ner_matchers.py  test_prompts.py
scripts/: check-stack.sh  rotate_jwt_key.sh
widget/: Dockerfile  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
widget/public/: index.html
widget/src/: ChatPanel.tsx  Widget.tsx  api.ts  index.css  main.tsx  postMessage.ts  theme.ts  types.ts
