# Backend service: real deps for foundations layer
[project]
name = "handle-backend"
version = "0.1.0"
description = "Maintainer's Copilot backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "hvac>=2.3.0",
    "minio>=7.2.0",
    "redis[hiredis]>=5.0.0",
    "langfuse>=2.50.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "pyjwt>=2.9.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "torch>=2.4.0,<2.9",
    "transformers>=4.45.0",
    "accelerate>=1.1.0",
    "safetensors>=0.4.5",
    "mlflow>=2.16.0",
    "scikit-learn>=1.5.0",
    "datasets>=3.0.0",
    "groq>=0.11.0",
    "markdown-it-py>=3.0.0",
    "tiktoken>=0.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# FastAPI idiom: Depends() in argument defaults is required
"app/api/dependencies.py" = ["B008"]
"app/api/routes/*.py" = ["B008"]
# fastapi-users API requires these named class attributes; values are deliberately placeholder
"app/services/auth/manager.py" = ["S105"]
# One-shot scripts: sync file I/O, /tmp paths, and subprocess git calls are intentional
"scripts/*.py" = ["ASYNC240", "S108", "S603", "S607"]
# httpx kwarg `timeout` is not a function-level timer; ASYNC109 doesn't apply
"app/infra/modelserver_client.py" = ["ASYNC109"]
# f-strings only interpolate hardcoded column names + literal SQL fragments, never user input
"app/repositories/chunks.py" = ["S608"]

[tool.mypy]
python_version = "3.12"
strict = false

[[tool.mypy.overrides]]
module = "app.domain.*"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
