[project]
name = "data-pipeline"
version = "0.1.0"
description = "Offline pipeline: fetch GitHub issues + docs, train classifier, build RAG corpus."
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "scikit-learn>=1.5.0",
  "transformers>=4.45.0",
  "accelerate>=1.1.0",
  "safetensors>=0.4.5",
  "datasets>=3.0.0",
  "torch>=2.4.0,<2.9",
  "mlflow>=2.16.0",
  "tenacity>=8.3.0",
  "structlog>=24.1.0",
  "docutils>=0.21.0",
  "markdown-it-py>=3.0.0",
  "tiktoken>=0.7.0",
  "pyyaml>=6.0.2",
  "tqdm>=4.66.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
