# Modelserver stub: separate FastAPI for ML inference, real code in Plan 1
[project]
name = "handle-modelserver"
version = "0.1.0"
description = "Maintainer's Copilot model server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
