# Modelserver: FastAPI ML inference (classifier in Plan 1b; NER/summarizer in Plan 1c)
[project]
name = "handle-modelserver"
version = "0.1.0"
description = "Maintainer's Copilot model server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "minio>=7.2.0",
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.5",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "spacy>=3.7.0",
    "groq>=0.11.0",
    "jinja2>=3.1.4",
    "hvac>=2.3.0",
    "tenacity>=8.3.0",
    "sentence-transformers>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# FastAPI idiom: Request in arg defaults is fine
"app/routes/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
